Setup signup process

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <%=provide(:title, "Home")%>
 <h1>Home</h1>
 <p><b>The New Network</b></p>
+<%=link_to "Signup", signup_path%><br>
+<%=link_to "Signin", "#"%>
